--- a/BulkyWeb/appsettings.json
+++ b/BulkyWeb/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=BulkyMVC;TrustServerCertificate=True"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=BulkyMVC1;TrustServerCertificate=True"
 
   },
   "Stripe": {
